--- a/settings.yml
+++ b/settings.yml
@@ -7,27 +7,27 @@
 #
 #                   -Created and coded by ShadowOxygen
 #                   -Code cleaned and revised by MohanadHosny#9152
-#                   -Settings file for OxygenX-0.8
+#                   -Settings file for OxygenX
 
 OxygenX:
 
   # Check if current version of OxygenX is latest
   check_for_updates: true
 
-  # Amount of checks for a account many times to check a account. will be slower if retries is set higher
-  # Needs to be 1 or higher (Recommanded: 1-2 for paid proxies, 3-6 for public proxies.)
-  retries: 3
+  # Amount of checks for a account many times to check a account. Set it to as much as you can to avoid errors.
+  # Needs to be 1 or higher (Recommanded: 4-8 for paid proxies, 8+ for public proxies.)
+  retries: 8
 
   # Higher for better accuracy but slower (counted in milliseconds, example: 6000ms = 6 seconds)
   timeout: 6000
 
   # Threads for account checking
-  threads: 200
+  threads: 100
   
-  # Remove all duplicates in combolist
+  # Remove all combo duplicates
   combo_duplicates: true
   
-  # Remove all duplicates in proxylist/api
+  # Remove all proxy duplicates
   proxy_duplicates: true
   
   # Check hits if its a mail access
@@ -42,56 +42,53 @@ OxygenX:
   # Save bad accounts
   save_bad: true
 
-  # Normal users should keep this false unless problem start happening
+  # Normal users should keep this false unless problems start happening
   debugging: false
   
-  
+  # Cape check
   capes:
-    # Check capes
     liquidbounce: true
     optifine: true
     labymod:  true
     mojang:  true
 
+  # Rank check
   rank:
-  # Set true if you want to check the ranks/level
     mineplex: true
     hypixel:  true
     hivemc: true
     veltpvp: true
 
+  # Level check
   level:
-    # Save High leveled accounts in files.
+    # Save "high level" accounts in different file than other
     hypixel: true
     mineplex: true
     
-    # Minimum high level accounts
-    hypixel_level: 25
-    mineplex_level: 25
+    # Minimum level to mark accounts as "high level"
+    hypixel_level: 21
+    mineplex_level: 21
 
   proxy:
-    # If proxies should be used, Will be proxyless if set to false (Recommended to use VPN if this is set to false.)
+    # If proxies should be used (it is HIGHLY recommended to use VPN and set "sleep_proxyless" if you don't want to get your ip blacklisted by Mojang)
     proxy: true
     # Proxy types: https | socks4 | socks5
     proxy_type: 'socks4'
-    # EXPERMENTAL! Still in testing stage, may have problems
-    # Locks the proxy so other threads can't use it
-    lock_proxy: false
-    # EXPERMENTAL! Still in testing stage, may have problems
-    # Auto remove proxies (you can limit the proxies removed with proxy_remove_limit)
-    remove_bad_proxy: false
-    # EXPERMENTAL! Still in testing stage, may have problems
-    # If remove bad proxies are on, once the proxy list hits the limit it will stop removing bad proxies
-    proxy_remove_limit: 2000
-    # If proxies be used for checking sfas (Will be slower but if false, you may get ip banned)
-    proxy_for_sfa: false
+    # EXPERMENTAL! Locks the proxy so other threads can't use it
+    lock_proxy: true
+    # EXPERMENTAL! Auto remove proxies (you can limit the proxies removed with proxy_remove_limit)
+    remove_bad_proxy: true
+    # EXPERMENTAL! f remove bad proxies are on, once the proxy list hits the limit it will stop removing bad proxies
+    proxy_remove_limit: 5000
+    # If proxies be used for checking SFA accounts
+    proxy_for_sfa: true
     # Sleep between checks if proxy mode is false (put 0 for no sleep) counted in secouds
-    sleep_proxyless: 30
+    sleep_proxyless: 5
     
     api:
       # If proxy api link to be used.
       use: false
       # If proxy_use_api is true, put api link in the parentheses
-      api_link: "https://api.proxyscrape.com/?request=getproxies&proxytype=socks4&timeout=3000"
+      api_link: "https://api.proxyscrape.com/?request=getproxies&proxytype=socks4&timeout=4000"
       # If proxy_use_api is true, put a number for seconds to refresh the link (every number under 30 is for no refreshing time, recommend refresh time: 300 seconds aka 5 minutes)
       refresh_time: 300
