--- a/settings.yml
+++ b/settings.yml
@@ -62,6 +62,7 @@ OxygenX:
     hypixel:  true
     hivemc: true
     veltpvp: true
+    skyblock: true
 
   # Level check
   level:
@@ -82,7 +83,7 @@ OxygenX:
     lock_proxy: true
     # EXPERMENTAL! Auto remove proxies (you can limit the proxies removed with proxy_remove_limit)
     remove_bad_proxy: true
-    # EXPERMENTAL! f remove bad proxies are on, once the proxy list hits the limit it will stop removing bad proxies
+    # EXPERMENTAL! If remove bad proxies are on, once the proxy list hits the limit it will stop removing bad proxies
     proxy_remove_limit: 5000
     # If proxies be used for checking SFA accounts
     proxy_for_sfa: true
